exposingApplicationsWithIngress/ingress-test-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ingress-test
  name: ingress-test-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ingress-test
  type: ClusterIP
status:
  loadBalancer: {}
